[package]
name = "silent_ot_pcg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
aes = "0.8"
block-cipher = { version = "0.9", features = ["block-padding"] }
# Finite field and elliptic curve libraries from arkworks
ark-ff = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-ec = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
nalgebra = "0.32"
nalgebra-sparse = "0.9"
typenum = "1.17"
galois = "0.7"

# Add other potential dependencies here as needed:
# e.g., sha3 = "0.10", blake2 = "0.10", some DPF crate?, matrix library?
